k8s/02-k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-ibm-cloud
spec:
  selector:
    app: demo-ibm-cloud
  ports:
    - protocol: TCP
      port: 8080
